--- a/todo.html
+++ b/todo.html
@@ -5,9 +5,16 @@
   <link rel="stylesheet" type="text/css" href="css/todo.css">
 </head>
 <body>
+
   <ul class="navbar">
     <li class="navbar-elem"><a href="index.html" id="logout">Logout</a></li>
   </ul>
+  <style>
+  #msj{
+    text-align: center;
+  }
+</style>
+  <p id="msj">se actualiza la lista dando refresh :(  y ya se agregan todos</p>
   <div class="container">
     <h1>TO DO</h1>
     <div class="list">
